--- a/BookMyShow/src/main/resources/application.properties
+++ b/BookMyShow/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.show-sql=true
+spring.datasource.url = jdbc:postgresql://localhost:5432/bookmyshow
+spring.datasource.username=msiva
+spring.datasource.password=password
 
